// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnifiedFieldList <FieldIcon /> FieldIcon accepts FieldIcon props 1`] = `
<FieldIcon
  fill="none"
  type="date"
/>
`;

exports[`UnifiedFieldList <FieldIcon /> FieldIcon renders properly 1`] = `
<FieldIcon
  type="date"
/>
`;

exports[`UnifiedFieldList <FieldIcon /> renders Document type properly 1`] = `
<FieldIcon
  type="number"
/>
`;

exports[`UnifiedFieldList <FieldIcon /> renders Histogram type properly 1`] = `
<FieldIcon
  type="number"
/>
`;
